# PersonalWebsite

./: .gitignore  .prettierignore  .prettierrc.json  Makefile  README.md  build.sh  config.example.toml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  tsconfig.eslint.json  tsconfig.json  vercel.json  vite.config.ts  website.service  wsgi.py
.github/workflows/: deploy.yml
app/: __init__.py  admin.py  build_assets.py  context.py  create_user.py  db.py  delete_users.py  forms.py  garden_state.py  garden_view.py  livereload.py  models.py  routes.py  seed.py  whiteboard_view.py
assets/: about.html  education.html  index.html  positions.html  projects.html  robots.txt  sitemap.xml  sw.js
assets/css/: main.css
assets/js/: background.js  dev.js  livereload.js  main.js  main.min.js
deploy/: deploy.sh
deploy/caddy/: Caddyfile
generator/: .gitignore  Makefile  generator.c
generator/html/: header.html  index.html
generator/reader/: reader.c  reader.h
htmlgen/: context.py  main.py
htmlgen/context/: __init__.py  about.py  common.py  education.py  positions.py  projects.py
main/: settings.py  urls.py
personal/: admin.py  models.py  urls.py  views.py
personal/templates/: entries.html  footer.html  index.html  profile.html
scripts/: build-book-covers.mjs  build-prod.js  build-prod.sh  build-watch.js  build.sh  compile-html.js  get_lan_ip.py
src/scss/: garden.scss  main.scss  whiteboard.scss
src/ts/: canvas.ts  garden.ts  main.ts  utils.ts  (+1 more)
tests/: test_garden.py  test_whiteboard.py
(+48 files in other folders)
