[project]
name = "website"
version = "3.2.5"
description = "Portfolio website."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.1",
    "flask-limiter>=3.5.0",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "mako>=1.3.10",
    "peewee>=3.17.9",
    "rcssmin>=1.2.0",
    "rjsmin>=1.2.4",
    "wtforms>=3.2.1",
]
