[project]
name = "website"
version = "4.1.1"
description = "Portfolio website."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.1",
    "flask-admin[peewee]>=1.6.1",
    "flask-limiter>=3.5.0",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "mako>=1.3.10",
    "peewee>=3.17.9",
    "wtforms>=3.2.1",
]
